--- a/package.json
+++ b/package.json
@@ -10,26 +10,31 @@
     "email": "email dev"
   },
   "dependencies": {
+    "@nextui-org/navbar": "^2.0.37",
     "@notionhq/client": "^2.2.15",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "0.0.19",
     "@svgr/webpack": "^8.1.0",
+    "@tabler/icons-react": "^3.23.0",
     "@upstash/ratelimit": "^1.2.1",
     "@upstash/redis": "^1.31.6",
     "@vercel/analytics": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.12.0",
     "lucide-react": "^0.396.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-element-to-jsx-string": "^15.0.0",
     "react-email": "2.1.4",
     "react-icons": "^5.2.1",
     "resend": "^3.3.0",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
